# CookWise

./: CMakeLists.txt  README.md
UML_Diagrams/: activity.puml
data/: grocery_list.json  history.json  recipes.json  storage.json  test_data.json
include/: Fridge.h  Ingredient.h  Recipe.h  RecipeManager.h  Storage.h
test/: CMakeLists.txt  integration_test.cpp
